fix-overflow

--- a/src/app/styl/views/settings_container.styl
+++ b/src/app/styl/views/settings_container.styl
@@ -48,7 +48,7 @@
                     padding 35px 20px !important
                     height: auto !important
                     opacity: 1 !important
-                    overflow: none !important
+                    overflow: visible !important
                     transform: scale(1) !important
 
         .navbar-s
@@ -106,12 +106,12 @@
                         margin: 0
                         display: block
                         margin: 0 20px
-                        overflow: hidden
                         border-bottom 1px solid rgba(225,225,225,0.15)
                         padding 35px 20px
                         transition: all 0.3s ease
                         transition-property: transform, opacity;
                         &.advanced
+                            overflow: hidden
                             padding: 0
                             opacity: 0
                             height: 0
